<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- title -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.TheCommunityBoard.MainTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/main_title"
        android:paddingTop="90dp"
        android:paddingBottom="90dp"
    />
    <!-- username field -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.TheCommunityBoard.Label"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/username"
        android:labelFor="@+id/username_input"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="10dp"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_label"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:boxStrokeWidth="3dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_text"
            style="@style/Widget.TheCommunityBoard.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hinted"
            tools:text="myLewysG99"
            android:inputType="textPersonName"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- password field -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.TheCommunityBoard.Label"
        app:layout_constraintTop_toBottomOf="@+id/username_input"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/password"
        android:labelFor="@+id/password_input"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="10dp"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_label"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:boxStrokeWidth="3dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            style="@style/Widget.TheCommunityBoard.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hinted"
            tools:text="****************"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_eye"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- sign in button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/huggable"
        android:padding="20dp"
        android:text="@string/sign_in"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input"
    />
    <!-- progress indicator -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/query_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/verifying_user"
        app:showAnimationBehavior="outward"
        app:hideAnimationBehavior="inward"
        android:visibility="invisible"
    />
    <!-- sign up button -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.TheCommunityBoard.Label"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sign_up_button"
        app:layout_constraintTop_toTopOf="@id/sign_up_button"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_button"
        android:text="@string/new_user_text"
        android:labelFor="@+id/password_input"
        android:padding="10dp"
    />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/huggable"
        android:padding="20dp"
        android:text="@string/sign_up"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/new_user_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
    />
</androidx.constraintlayout.widget.ConstraintLayout>