<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- main title -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.TheCommunityBoard.MainTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/main_title"
        android:paddingTop="90dp"
        android:paddingBottom="30dp"
        />
    <!-- username field -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.TheCommunityBoard.Label"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/username"
        android:labelFor="@+id/username_input"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="10dp"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_label"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:boxStrokeWidth="3dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_text"
            style="@style/Widget.TheCommunityBoard.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            tools:text="myLewysG"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- birthdate field -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bdate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.TheCommunityBoard.Label"
        app:layout_constraintTop_toBottomOf="@+id/username_input"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/birth_date"
        android:labelFor="@+id/bdate_input"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="10dp"
    />
    <!-- progress indicator -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/query_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/verifying_user"
        app:showAnimationBehavior="outward"
        app:hideAnimationBehavior="inward"
        android:visibility="invisible"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bdate_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bdate_input_button"
        app:layout_constraintTop_toBottomOf="@+id/bdate_label"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:boxStrokeWidth="3dp"
        android:clickable="false"
        android:focusable="false"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bdate_text"
            style="@style/Widget.TheCommunityBoard.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bdate_hint"
            tools:text="May 9, 1997"
            android:inputType="date"
            android:clickable="false"
            android:focusable="false"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/bdate_input_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_calendar"
        android:tint="?attr/colorPrimary"
        android:hint="@string/bdate_button_hint"
        app:layout_constraintTop_toTopOf="@id/bdate_input"
        app:layout_constraintBottom_toBottomOf="@id/bdate_input"
        app:layout_constraintStart_toEndOf="@id/bdate_input"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
    />
    <!-- password field -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.TheCommunityBoard.Label"
        app:layout_constraintTop_toBottomOf="@+id/bdate_input"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/password"
        android:labelFor="@+id/password_input"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="10dp"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_label"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:boxStrokeWidth="3dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            style="@style/Widget.TheCommunityBoard.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            tools:text="****************"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_eye"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- terms checkbox -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/terms_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.TheCommunityBoard.Label"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/terms_check"
        app:layout_constraintTop_toTopOf="@id/terms_check"
        app:layout_constraintBottom_toBottomOf="@id/terms_check"
        android:text="@string/terms_agreement"
        android:labelFor="@+id/terms_check"
        android:padding="10dp"
    />

    <CheckBox
        android:id="@+id/terms_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/terms_label"
        app:layout_constraintTop_toBottomOf="@id/password_input"
    />
    <!-- sign up button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/huggable"
        android:padding="20dp"
        android:text="@string/sign_up"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms_label"
        />
</androidx.constraintlayout.widget.ConstraintLayout>